; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_motion_est.c_get_penalty_factor.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_motion_est.c_get_penalty_factor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FF_LAMBDA_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @get_penalty_factor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_penalty_factor(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = and i32 %8, 255
  switch i32 %9, label %10 [
    i32 132, label %11
    i32 138, label %15
    i32 129, label %21
    i32 128, label %26
    i32 131, label %31
    i32 137, label %31
    i32 133, label %36
    i32 134, label %36
    i32 130, label %36
    i32 135, label %36
    i32 139, label %40
    i32 136, label %40
  ]

10:                                               ; preds = %3
  br label %11

11:                                               ; preds = %3, %10
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @FF_LAMBDA_SHIFT, align 4
  %14 = ashr i32 %12, %13
  store i32 %14, i32* %4, align 4
  br label %41

15:                                               ; preds = %3
  %16 = load i32, i32* %5, align 4
  %17 = mul nsw i32 3, %16
  %18 = load i32, i32* @FF_LAMBDA_SHIFT, align 4
  %19 = add nsw i32 %18, 1
  %20 = ashr i32 %17, %19
  store i32 %20, i32* %4, align 4
  br label %41

21:                                               ; preds = %3
  %22 = load i32, i32* %5, align 4
  %23 = mul nsw i32 4, %22
  %24 = load i32, i32* @FF_LAMBDA_SHIFT, align 4
  %25 = ashr i32 %23, %24
  store i32 %25, i32* %4, align 4
  br label %41

26:                                               ; preds = %3
  %27 = load i32, i32* %5, align 4
  %28 = mul nsw i32 2, %27
  %29 = load i32, i32* @FF_LAMBDA_SHIFT, align 4
  %30 = ashr i32 %28, %29
  store i32 %30, i32* %4, align 4
  br label %41

31:                                               ; preds = %3, %3
  %32 = load i32, i32* %5, align 4
  %33 = mul nsw i32 2, %32
  %34 = load i32, i32* @FF_LAMBDA_SHIFT, align 4
  %35 = ashr i32 %33, %34
  store i32 %35, i32* %4, align 4
  br label %41

36:                                               ; preds = %3, %3, %3, %3
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @FF_LAMBDA_SHIFT, align 4
  %39 = ashr i32 %37, %38
  store i32 %39, i32* %4, align 4
  br label %41

40:                                               ; preds = %3, %3
  store i32 1, i32* %4, align 4
  br label %41

41:                                               ; preds = %40, %36, %31, %26, %21, %15, %11
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
